--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -23,8 +23,12 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "ai": "^2.2.34",
+    "classnames": "^2.5.1",
     "drizzle-orm": "^0.29.3",
+    "nanoid": "^5.0.5",
     "next": "^14.0.4",
+    "openai": "^4.27.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
