--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "lint": "turbo lint",
+    "lint": "turbo run lint --filter=main",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "dev:main": "turbo run dev --filter=main"
   },
