--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -17,6 +17,7 @@
     "db:update": "pnpm run db:check && pnpm run db:generate && pnpm run db:push && pnpm run db:up && pnpm run db:studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -26,6 +27,7 @@
     "ai": "^2.2.34",
     "classnames": "^2.5.1",
     "drizzle-orm": "^0.29.3",
+    "immer": "^10.0.3",
     "nanoid": "^5.0.5",
     "next": "^14.0.4",
     "openai": "^4.27.0",
@@ -34,7 +36,8 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
