--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.7",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
